# dhbw-scientific-programming-exam

./: README.md  main.ipynb  main.py  pyproject.toml  sentinel-2-data-processing-and-normalization.ipynb  single-modality-baseline-with-bioclimatic-data.ipynb  single-modality-baseline-with-landsat-data.ipynb  single-modality-baseline-with-sentinel-2-data.ipynb  test.ipynb
