[project]
name = "geolifeclef25-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.6",
    "folium>=0.19.5",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.2",
    "marimo[recommended]>=0.13.4",
    "matplotlib>=3.10.1",
    "pandas[performance,recommended]>=2.2.3",
    "plotly>=6.1.2",
    "polars>=1.29.0",
    "rasterio>=1.4.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
